@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fixed a Windows GDI leak when testing alpha blending capabilities
 	- Fixed a name conflict with new (VC 2008 Express) winsock2.h
 	  versions and another conflict that produced compile errors
 	  with VC 2008 (STR #2301).
